Finished main page except project descs

--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
             <li class="header__link-wrapper">
               <a href="./index.html#about" class="header__link">About </a>
             </li>
-
             <li class="header__link-wrapper">
               <div class="dropdown">
                 <a href="./index.html#projects" class="header__link">
@@ -53,7 +52,9 @@
                 </div>
               </div>
             </li>
-
+            <li class="header__link-wrapper">
+              <a href="./assets/resume.pdf" download class="header__link"> Resume </a>
+            </li>
             <li class="header__link-wrapper">
               <a href="./index.html#contact" class="header__link"> Contact </a>
             </li>
@@ -114,8 +115,8 @@
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main">About Me</span>
           <span class="heading-sec__sub">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente
+            Here you will find more information about me, what I do, and my current skills
+            mostly in terms of game development and programming
           </span>
         </h2>
         <div class="about__content">
@@ -209,7 +210,7 @@
                           href="starfighter.html"
                           class="btn btn--med btn--theme dynamicBgClr"
                           target="_self"
-                  >Case Study</a
+                  >View Project</a
                   >
                 </div>
               </div>
@@ -236,7 +237,7 @@
                           href="organ-defender.html"
                           class="btn btn--med btn--theme dynamicBgClr"
                           target="_self"
-                  >Case Study</a
+                  >View Project</a
                   >
                 </div>
               </div>
@@ -263,7 +264,7 @@
                           href="sams-town.html"
                           class="btn btn--med btn--theme dynamicBgClr"
                           target="_self"
-                  >Case Study</a
+                  >View Project</a
                   >
                 </div>
               </div>
@@ -290,7 +291,7 @@
                           href="mars-base.html"
                           class="btn btn--med btn--theme dynamicBgClr"
                           target="_self"
-                  >Case Study</a
+                  >View Project</a
                   >
                 </div>
               </div>
@@ -317,7 +318,7 @@
                           href="ai-pathfinding.html"
                           class="btn btn--med btn--theme dynamicBgClr"
                           target="_self"
-                  >Case Study</a
+                  >View Project</a
                   >
                 </div>
               </div>
@@ -327,7 +328,7 @@
               <div class="projects__row">
                 <div class="projects__row-img-cont">
                   <img
-                          src="./assets/jpeg/project-mockup-example.jpeg"
+                          src="./assets/mad-dash-dispatch/mad-dash-dispatch-logo.jpg"
                           alt="Software Screenshot"
                           class="projects__row-img"
                           loading="lazy"
@@ -344,7 +345,7 @@
                           href="mad-dash-dispatch.html"
                           class="btn btn--med btn--theme dynamicBgClr"
                           target="_self"
-                  >Case Study</a
+                  >View Project</a
                   >
                 </div>
               </div>
@@ -400,8 +401,7 @@
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main heading-sec__main--lt">Contact</span>
           <span class="heading-sec__sub heading-sec__sub--lt">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente
+            Feel free to contact me in the below form or via email at EMAIL@DOMAIN
           </span>
         </h2>
         <div class="contact__form-container">
@@ -470,24 +470,10 @@
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
-                <img
-                  class="main-footer__icon"
-                  src="./assets/png/twitter-ico.png"
-                  alt="icon"
-                />
-              </a>
               <!--<a target="_blank" rel="noreferrer" href="#">
                 <img
                   class="main-footer__icon"
-                  src="./assets/png/yt-ico.png"
-                  alt="icon"
-                />
-              </a>
-              <a target="_blank" rel="noreferrer" href="#">
-                <img
-                  class="main-footer__icon main-footer__icon&#45;&#45;mr-none"
-                  src="./assets/png/insta-ico.png"
+                  src="./assets/png/twitter-ico.png"
                   alt="icon"
                 />
               </a>-->
@@ -495,20 +481,15 @@
           </div>
           <div class="main-footer__row main-footer__row-2">
             <h4 class="heading heading-sm text-lt">Jack Waldron</h4>
-            <p class="main-footer__short-desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit facilis
-              tempora explicabo quae quod deserunt
-            </p>
           </div>
         </div>
-
         <!-- If you give me some credit or shoutout here by linking to my website, then it will be a big thing for me and will help me a lot :) -->
-        <!--<div class="main-footer__lower">
-          &copy; Copyright 2021. Made by
+        <div class="main-footer__lower">
+          Adapted from template made by
           <a rel="noreferrer" target="_blank" href="https://rammaheshwari.com"
             >Ram Maheshwari</a
           >
-        </div>-->
+        </div>
       </div>
     </footer>
 
