--- a/starfighter.html
+++ b/starfighter.html
@@ -38,9 +38,19 @@
               <a href="index.html#about" class="header__link">About </a>
             </li>
             <li class="header__link-wrapper">
-              <a href="index.html#projects" class="header__link">
-                Projects
-              </a>
+              <div class="dropdown">
+                <a href="./index.html#projects" class="header__link">
+                  Projects
+                </a>
+                <div class="dropdown-content header__links" style="width: auto">
+                  <a href="starfighter.html" class="header__link">Starfighter</a>
+                  <a href="organ-defender.html" class="header__link">Organ Defender</a>
+                  <a href="sams-town.html" class="header__link">Sam's Town</a>
+                  <a href="mars-base.html" class="header__link">Mars Base</a>
+                  <a href="ai-pathfinding.html" class="header__link">AI Pathfinding</a>
+                  <a href="mad-dash-dispatch.html" class="header__link">Mad Dash Dispatch</a>
+                </div>
+              </div>
             </li>
             <li class="header__link-wrapper">
               <a href="index.html#contact" class="header__link"> Contact </a>
