Update menu bar of project page

--- a/starfighter.html
+++ b/starfighter.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Case Study of Project 1</title>
-    <meta name="description" content="Case study page of Project" />
+    <title>Starfighter: Earth's Only Hope</title>
+    <meta name="description" content="Starfighter: Earth's Only Hope" />
 
     <link rel="stylesheet" href="css/style.css" />
 
@@ -20,22 +20,15 @@
     <header class="header">
       <div class="header__content">
         <div class="header__logo-container">
-          <!--<div class="header__logo-img-cont">
-            <img
-              src="../assets/png/john-doe.png"
-              alt="Ram Maheshwari Logo Image"
-              class="header__logo-img"
-            />
-          </div>-->
           <span class="header__logo-sub">Jack Waldron</span>
         </div>
         <div class="header__main">
           <ul class="header__links">
             <li class="header__link-wrapper">
-              <a href="/index.html" class="header__link"> Home </a>
+              <a href="./index.html" class="header__link"> Home </a>
             </li>
             <li class="header__link-wrapper">
-              <a href="index.html#about" class="header__link">About </a>
+              <a href="./index.html#about" class="header__link">About </a>
             </li>
             <li class="header__link-wrapper">
               <div class="dropdown">
@@ -53,23 +46,25 @@
               </div>
             </li>
             <li class="header__link-wrapper">
-              <a href="index.html#contact" class="header__link"> Contact </a>
+              <a href="./assets/resume.pdf" download class="header__link"> Resume </a>
+            </li>
+            <li class="header__link-wrapper">
+              <a href="./index.html#contact" class="header__link"> Contact </a>
             </li>
           </ul>
           <div class="header__main-ham-menu-cont">
             <img
-              src="assets/svg/ham-menu.svg"
-              alt="hamburger menu"
-              class="header__main-ham-menu"
+                    src="./assets/svg/ham-menu.svg"
+                    alt="hamburger menu"
+                    class="header__main-ham-menu"
             />
             <img
-              src="assets/svg/ham-menu-close.svg"
-              alt="hamburger menu close"
-              class="header__main-ham-menu-close d-none"
+                    src="./assets/svg/ham-menu-close.svg"
+                    alt="hamburger menu close"
+                    class="header__main-ham-menu-close d-none"
             />
           </div>
         </div>
-      </div>
       <div class="header__sm-menu">
         <div class="header__sm-menu-content">
           <ul class="header__sm-menu-links">
