Fix up homepage content besides photos

--- a/index.html
+++ b/index.html
@@ -20,13 +20,6 @@
     <header class="header">
       <div class="header__content">
         <div class="header__logo-container">
-          <!--<div class="header__logo-img-cont">
-            <img
-              src="./assets/png/john-doe.png"
-              alt="Ram Maheshwari Logo Image"
-              class="header__logo-img"
-            />
-          </div>-->
           <span class="header__logo-sub">Jack Waldron</span>
         </div>
         <div class="header__main">
@@ -125,25 +118,15 @@
             <div class="about__content-details">
               <p class="about__content-details-para">
                 Hey! It's
-                <strong>Jack Waldron</strong>
-                and I'm a <strong> Game Programmer </strong> located in
-                Brisbane, Australia. I've done many game projects requiring vast
-                skill sets ranging from, Virtual Reality, Multiplayer, First-Person,
-                Tower Defence, Endless Survival, and more!
-                <!--I've done
-                <strong> remote </strong>
-                projects for agencies, consulted for startups, and collaborated
-                with talented people to create
-                <strong>digital products </strong>
-                for both business and consumer use.-->
+                <strong>Jack Waldron,</strong> and I'm a <strong> Game Programmer </strong> located in
+                <strong> Brisbane, Australia </strong>. I've done many game projects requiring vast
+                skill sets ranging from, <strong>Virtual Reality</strong>, <strong>Multiplayer</strong>,
+                <strong>First-Person</strong>, <strong>Tower Defence</strong>, <strong>Endless Survival</strong>,
+                and more!
               </p>
               <p class="about__content-details-para">
-                If you feel I am a match for your project, I'm open to starting
+                If you feel I am a match for your company or project, I'm open to starting
                 a discussion, just <strong>contact</strong> me here.
-                <!--I'm a bit of a digital product junky. Over the years, I've used
-                hundreds of web and mobile apps in different industries and
-                verticals. Feel free to
-                <strong>contact</strong> me here.-->
               </p>
             </div>
             <a href="./#contact" class="btn btn--med btn--theme dynamicBgClr"
@@ -157,16 +140,19 @@
               <div class="skills__skill">Python</div>
               <div class="skills__skill">HTML/CSS</div>
               <div class="skills__skill">Unity</div>
+              <!--<div class="skills__skill">Unity Gaming Services</div>-->
               <div class="skills__skill">Unreal Engine 4/5</div>
+              <div class="skills__skill">WebGl</div>
               <div class="skills__skill">Level Design</div>
               <div class="skills__skill">Playtesting</div>
               <div class="skills__skill">GIT</div>
               <div class="skills__skill">GitHub</div>
-              <div class="skills__skill">SVN</div>
+              <!--<div class="skills__skill">SVN</div>-->
               <div class="skills__skill">Visual Studio</div>
               <div class="skills__skill">Jetbrains Rider</div>
               <div class="skills__skill">Desktop</div>
               <div class="skills__skill">Mobile</div>
+              <div class="skills__skill">Autodesk Maya</div>
               <div class="skills__skill">3D Modelling/Animation</div>
               <div class="skills__skill">Virtual Production</div>
               <div class="skills__skill">Trello</div>
@@ -185,7 +171,6 @@
             Here are a range of some of my projects!
           </span>
         </h2>
-
         <div class="projects__content">
           <div class="projects-container">
             <div class="mySlides fade">
@@ -194,7 +179,7 @@
                 <div class="projects__row-img-cont">
                   <img
                           src="assets/starfighter/starfighter-logo.png"
-                          alt="Earths only hope sceenshot"
+                          alt="Earths only hope screenshot"
                           class="projects__row-img"
                           loading="lazy"
                   />
@@ -202,9 +187,8 @@
                 <div class="projects__row-content">
                   <h3 class="projects__row-content-title">Starfighter: Earth's Only Hope</h3>
                   <p class="projects__row-content-desc">
-                    IGB388 VR <br> ipsum dolor sit amet consectetur adipisicing elit. Hic
-                    facilis tempora, explicabo quae quod deserunt eius sapiente
-                    praesentium.
+                    Starfighter: Earth's Only Hope is a VR action starfighter game that I and 2 others
+                    worked on at QUT during the unit IGB388: Design and Development of Immersive Environments.
                   </p>
                   <a
                           href="starfighter.html"
@@ -229,9 +213,8 @@
                 <div class="projects__row-content">
                   <h3 class="projects__row-content-title">Organ Defender</h3>
                   <p class="projects__row-content-desc">
-                    Mini Jame Game 20 <br> ipsum dolor sit amet consectetur adipisicing elit. Hic
-                    facilis tempora, explicabo quae quod deserunt eius sapiente
-                    praesentium.
+                    Organ Defender is a Tower Defence Wave Survival game solo developed over a weekend
+                    for Mini Jame Gam 20. This game placed #16 overall.
                   </p>
                   <a
                           href="organ-defender.html"
@@ -256,12 +239,38 @@
                 <div class="projects__row-content">
                   <h3 class="projects__row-content-title">Sam's Town</h3>
                   <p class="projects__row-content-desc">
-                    IGB200 Industry Project <br> ipsum dolor sit amet consectetur adipisicing elit. Hic
-                    facilis tempora, explicabo quae quod deserunt eius sapiente
-                    praesentium.
+                    Sam's Town is a game made in conjunction with Awesome Women in Construction at QUT for the
+                    unit IGB200: Applied Game Development. This was an industry project to inspire women
+                    to join the construction industry.
                   </p>
                   <a
                           href="sams-town.html"
+                          class="btn btn--med btn--theme dynamicBgClr"
+                          target="_self"
+                  >View Project</a
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="mySlides fade">
+              <!--Mad Dash Dispatch-->
+              <div class="projects__row">
+                <div class="projects__row-img-cont">
+                  <img
+                          src="./assets/mad-dash-dispatch/mad-dash-dispatch-logo.jpg"
+                          alt="Software Screenshot"
+                          class="projects__row-img"
+                          loading="lazy"
+                  />
+                </div>
+                <div class="projects__row-content">
+                  <h3 class="projects__row-content-title">Mad Dash Dispatch</h3>
+                  <p class="projects__row-content-desc">
+                    Mad Dash Dispatch is VR delivery game solo developed over a week as a submission
+                    to the VR Jam 2023. This project was my first ever game jam.
+                  </p>
+                  <a
+                          href="mad-dash-dispatch.html"
                           class="btn btn--med btn--theme dynamicBgClr"
                           target="_self"
                   >View Project</a
@@ -283,9 +292,8 @@
                 <div class="projects__row-content">
                   <h3 class="projects__row-content-title">Mars Base</h3>
                   <p class="projects__row-content-desc">
-                    Level design. <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                    facilis tempora, explicabo quae quod deserunt eius sapiente
-                    praesentium.
+                    Mars Base is a small game where the focus was on level design using tiles. This was developed by
+                    myself and 3 others at QUT for the unit IGB321: Immersive Game Level Design.
                   </p>
                   <a
                           href="mars-base.html"
@@ -310,39 +318,11 @@
                 <div class="projects__row-content">
                   <h3 class="projects__row-content-title">AI Pathfinding</h3>
                   <p class="projects__row-content-desc">
-                    A* & Greedy <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                    facilis tempora, explicabo quae quod deserunt eius sapiente
-                    praesentium.
+                    AI Pathfinding is a demo prototype to show the pathfinding of the player and NPCs.
+                    Both A* and Greedy were used to show the advantages and disadvantages of both.
                   </p>
                   <a
                           href="ai-pathfinding.html"
-                          class="btn btn--med btn--theme dynamicBgClr"
-                          target="_self"
-                  >View Project</a
-                  >
-                </div>
-              </div>
-            </div>
-            <div class="mySlides fade">
-              <!--Mad Dash Dispatch-->
-              <div class="projects__row">
-                <div class="projects__row-img-cont">
-                  <img
-                          src="./assets/mad-dash-dispatch/mad-dash-dispatch-logo.jpg"
-                          alt="Software Screenshot"
-                          class="projects__row-img"
-                          loading="lazy"
-                  />
-                </div>
-                <div class="projects__row-content">
-                  <h3 class="projects__row-content-title">Mad Dash Dispatch</h3>
-                  <p class="projects__row-content-desc">
-                    A* & Greedy <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                    facilis tempora, explicabo quae quod deserunt eius sapiente
-                    praesentium.
-                  </p>
-                  <a
-                          href="mad-dash-dispatch.html"
                           class="btn btn--med btn--theme dynamicBgClr"
                           target="_self"
                   >View Project</a
@@ -470,20 +450,12 @@
                   alt="icon"
                 />
               </a>
-              <!--<a target="_blank" rel="noreferrer" href="#">
-                <img
-                  class="main-footer__icon"
-                  src="./assets/png/twitter-ico.png"
-                  alt="icon"
-                />
-              </a>-->
             </div>
           </div>
           <div class="main-footer__row main-footer__row-2">
             <h4 class="heading heading-sm text-lt">Jack Waldron</h4>
           </div>
         </div>
-        <!-- If you give me some credit or shoutout here by linking to my website, then it will be a big thing for me and will help me a lot :) -->
         <div class="main-footer__lower">
           Adapted from template made by
           <a rel="noreferrer" target="_blank" href="https://rammaheshwari.com"
