Starfighter page contents

--- a/starfighter.html
+++ b/starfighter.html
@@ -172,14 +172,21 @@
                 During development of Starfighter: Earth's Only Hope I Acted as lead
                 programmer, working with another programmer and a game designer.
                 This game started as my own pitch, then evolving into the game it is
-                after incorporating elements from the rest of the groups pitches.
+                after incorporating elements from the rest of the groups pitches and ideas.
               </p>
               <p class="project-details__desc-para">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
-                alias tenetur minus quaerat aliquid, aut provident blanditiis,
-                deleniti aspernatur ipsam eaque veniam voluptatem corporis vitae
-                mollitia laborum corrupti ullam rem?
+                This project was made in Unity and programmed in C#. We opted to use the
+                OpenXR framework for interacting with the VR headset within the project.
+                This allowed me to further my Unity/C# skills while learning about development
+                for VR and all the challenges within that field. This also allowed for me to gain
+                experience developing for multiple platforms, Desktop (PCVR) and Android (Quest Standalone).
               </p>
+              <ul style="list-style-type:disc; font-weight: bold" class="project-details__desc-para">
+                <li style="font-weight: normal">During this project, I undertook the following roles:</li>
+                <li>Lead Programmer</li>
+                <li>Concept/Pitch Designer</li>
+                <li>Playtesting</li>
+              </ul>
             </div>
             <div class="project-details__tools-used">
               <h3 class="project-details__content-title">Tools Used</h3>
