Organ defender page content

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
               <div class="skills__skill">WebGl</div>
               <div class="skills__skill">Level Design</div>
               <div class="skills__skill">Playtesting</div>
-              <div class="skills__skill">GIT</div>
+              <div class="skills__skill">Git</div>
               <div class="skills__skill">GitHub</div>
               <!--<div class="skills__skill">SVN</div>-->
               <div class="skills__skill">Visual Studio</div>
