--- a/starfighter.html
+++ b/starfighter.html
@@ -86,6 +86,7 @@
           </ul>
         </div>
       </div>
+      </div>
     </header>
     <section class="project-cs-hero">
       <div class="project-cs-hero__content">
@@ -110,18 +111,18 @@
         <div class="project-details__content">
           <div class="slideshow-container">
             <div class="mySlides fade">
-              <img src="assets/starfighter/starfighter-logo.png" style="width:100%; height:100%">
+              <img src="assets/starfighter/starfighter-logo.png" style="width:100%; height:100%" alt="Starfighter Logo">
             </div>
             <div class="mySlides fade">
-              <img src="assets/starfighter/starfighter1.jpg" style="width:100%; height:100%">
+              <img src="assets/starfighter/starfighter1.jpg" style="width:100%; height:100%" alt="Starfighter screenshot">
             </div>
             <div class="mySlides fade">
-              <img src="assets/starfighter/starfighter2.jpg" style="width:100%; height:100%">
+              <img src="assets/starfighter/starfighter2.jpg" style="width:100%; height:100%" alt="Starfighter screenshot">
             </div>
             <div class="mySlides fade">
-              <img src="assets/starfighter/starfighter3.jpg" style="width:100%; height:100%">
+              <img src="assets/starfighter/starfighter3.jpg" style="width:100%; height:100%" alt="Starfighter screenshot">
             </div><div class="mySlides fade">
-              <img src="assets/starfighter/starfighter4.jpg" style="width:100%; height:100%">
+              <img src="assets/starfighter/starfighter4.jpg" style="width:100%; height:100%" alt="Starfighter screenshot">
             </div>
             <a class="prev" onclick="plusSlides(-1)">❮</a>
             <a class="next" onclick="plusSlides(1)">❯</a>
@@ -189,13 +190,13 @@
               </ul>
             </div>
             <div class="project-details__tools-used">
-              <h3 class="project-details__content-title">Tools Used</h3>
+              <h3 class="project-details__content-title">Tools/Skills Used</h3>
               <div class="skills">
                 <div class="skills__skill">C#</div>
                 <div class="skills__skill">Unity</div>
                 <div class="skills__skill">OpenXR</div>
                 <div class="skills__skill">Oculus SDK</div>
-                <div class="skills__skill">GIT</div>
+                <div class="skills__skill">Git</div>
                 <div class="skills__skill">GitHub</div>
                 <div class="skills__skill">SCRUM</div>
                 <div class="skills__skill">Desktop</div>
@@ -234,58 +235,32 @@
               <span>Social</span>
             </h2>
             <div class="main-footer__social-cont">
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/jack-waldron-66175b20a/">
                 <img
-                  class="main-footer__icon"
-                  src="assets/png/linkedin-ico.png"
-                  alt="icon"
+                        class="main-footer__icon"
+                        src="./assets/png/linkedin-ico.png"
+                        alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://github.com/Foodle1">
                 <img
-                  class="main-footer__icon"
-                  src="assets/png/github-ico.png"
-                  alt="icon"
-                />
-              </a>
-              <a target="_blank" rel="noreferrer" href="#">
-                <img
-                  class="main-footer__icon"
-                  src="assets/png/twitter-ico.png"
-                  alt="icon"
-                />
-              </a>
-              <a target="_blank" rel="noreferrer" href="#">
-                <img
-                  class="main-footer__icon"
-                  src="assets/png/yt-ico.png"
-                  alt="icon"
-                />
-              </a>
-              <a target="_blank" rel="noreferrer" href="#">
-                <img
-                  class="main-footer__icon main-footer__icon--mr-none"
-                  src="assets/png/insta-ico.png"
-                  alt="icon"
+                        class="main-footer__icon"
+                        src="./assets/png/github-ico.png"
+                        alt="icon"
                 />
               </a>
             </div>
           </div>
           <div class="main-footer__row main-footer__row-2">
             <h4 class="heading heading-sm text-lt">Jack Waldron</h4>
-            <p class="main-footer__short-desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit facilis
-              tempora explicabo quae quod deserunt
-            </p>
           </div>
         </div>
-
-        <!--<div class="main-footer__lower">
-          &copy; Copyright 2021. Made by
+        <div class="main-footer__lower">
+          Adapted from template made by
           <a rel="noreferrer" target="_blank" href="https://rammaheshwari.com"
-            >Ram Maheshwari</a
+          >Ram Maheshwari</a
           >
-        </div>-->
+        </div>
       </div>
     </footer>
     <script src="index.js"></script>
