--- a/organ-defender.html
+++ b/organ-defender.html
@@ -1,230 +1,256 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Case Study of Project 2</title>
-    <meta name="description" content="Case study page of Project" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Organ Defender</title>
+  <meta name="description" content="Organ Defender" />
 
-    <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/style.css" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700;900&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <header class="header">
-      <div class="header__content">
-        <div class="header__logo-container">
-          <div class="header__logo-img-cont">
-            <img
-              src="assets/png/john-doe.png"
-              alt="Ram Maheshwari Logo Image"
-              class="header__logo-img"
-            />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+          href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700;900&display=swap"
+          rel="stylesheet"
+  />
+</head>
+<body>
+<header class="header">
+  <div class="header__content">
+    <div class="header__logo-container">
+      <span class="header__logo-sub">Jack Waldron</span>
+    </div>
+    <div class="header__main">
+      <ul class="header__links">
+        <li class="header__link-wrapper">
+          <a href="./index.html" class="header__link"> Home </a>
+        </li>
+        <li class="header__link-wrapper">
+          <a href="./index.html#about" class="header__link">About </a>
+        </li>
+        <li class="header__link-wrapper">
+          <div class="dropdown">
+            <a href="./index.html#projects" class="header__link">
+              Projects
+            </a>
+            <div class="dropdown-content header__links" style="width: auto">
+              <a href="starfighter.html" class="header__link">Starfighter</a>
+              <a href="organ-defender.html" class="header__link">Organ Defender</a>
+              <a href="sams-town.html" class="header__link">Sam's Town</a>
+              <a href="mars-base.html" class="header__link">Mars Base</a>
+              <a href="ai-pathfinding.html" class="header__link">AI Pathfinding</a>
+              <a href="mad-dash-dispatch.html" class="header__link">Mad Dash Dispatch</a>
+            </div>
           </div>
-          <span class="header__logo-sub">John Doe</span>
-        </div>
-        <div class="header__main">
-          <ul class="header__links">
-            <li class="header__link-wrapper">
-              <a href="index.html" class="header__link"> Home </a>
-            </li>
-            <li class="header__link-wrapper">
-              <a href="index.html#about" class="header__link">About </a>
-            </li>
-            <li class="header__link-wrapper">
-              <a href="index.html#projects" class="header__link">
-                Projects
-              </a>
-            </li>
-            <li class="header__link-wrapper">
-              <a href="index.html#contact" class="header__link"> Contact </a>
-            </li>
-          </ul>
-          <div class="header__main-ham-menu-cont">
-            <img
-              src="assets/svg/ham-menu.svg"
-              alt="hamburger menu"
-              class="header__main-ham-menu"
-            />
-            <img
-              src="assets/svg/ham-menu-close.svg"
-              alt="hamburger menu close"
-              class="header__main-ham-menu-close d-none"
-            />
-          </div>
-        </div>
+        </li>
+        <li class="header__link-wrapper">
+          <a href="./assets/resume.pdf" download class="header__link"> Resume </a>
+        </li>
+        <li class="header__link-wrapper">
+          <a href="./index.html#contact" class="header__link"> Contact </a>
+        </li>
+      </ul>
+      <div class="header__main-ham-menu-cont">
+        <img
+                src="./assets/svg/ham-menu.svg"
+                alt="hamburger menu"
+                class="header__main-ham-menu"
+        />
+        <img
+                src="./assets/svg/ham-menu-close.svg"
+                alt="hamburger menu close"
+                class="header__main-ham-menu-close d-none"
+        />
       </div>
-      <div class="header__sm-menu">
-        <div class="header__sm-menu-content">
-          <ul class="header__sm-menu-links">
-            <li class="header__sm-menu-link">
-              <a href="index.html"> Home </a>
-            </li>
+    </div>
+    <div class="header__sm-menu">
+      <div class="header__sm-menu-content">
+        <ul class="header__sm-menu-links">
+          <li class="header__sm-menu-link">
+            <a href="index.html"> Home </a>
+          </li>
 
-            <li class="header__sm-menu-link">
-              <a href="index.html#about"> About </a>
-            </li>
+          <li class="header__sm-menu-link">
+            <a href="index.html#about"> About </a>
+          </li>
 
-            <li class="header__sm-menu-link">
-              <a href="index.html#projects"> Projects </a>
-            </li>
+          <li class="header__sm-menu-link">
+            <a href="index.html#projects"> Projects </a>
+          </li>
 
-            <li class="header__sm-menu-link">
-              <a href="index.html#contact"> Contact </a>
-            </li>
-          </ul>
-        </div>
+          <li class="header__sm-menu-link">
+            <a href="index.html#contact"> Contact </a>
+          </li>
+        </ul>
       </div>
-    </header>
-    <section class="project-cs-hero">
-      <div class="project-cs-hero__content">
-        <h1 class="heading-primary">Project 2</h1>
-        <div class="project-cs-hero__info">
-          <p class="text-primary">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos
-            in numquam incidunt earum quaerat cum fuga, atque similique natus
-            nobis sit.
+    </div>
+  </div>
+</header>
+<section class="project-cs-hero">
+  <div class="project-cs-hero__content">
+    <h1 class="heading-primary">Organ Defender</h1>
+    <div class="project-cs-hero__info">
+      <p class="text-primary">
+        This is a tower defence wave survival game made for the Mini Jame Gam 20.
+      </p>
+    </div>
+    <div class="project-cs-hero__cta">
+      <iframe frameborder="0" src="https://itch.io/embed/2206570?bg_color=080808&amp;fg_color=dbdbdb&amp;border_color=2a2a2a"
+              width="552" height="167"><a href="https://foodle.itch.io/organ-defender">Organ Defender by Jack Waldron</a>
+      </iframe>
+    </div>
+  </div>
+</section>
+<section class="project-details">
+  <div class="main-container">
+    <div class="project-details__content">
+      <div class="slideshow-container">
+        <div class="mySlides fade">
+          <img src="assets/organ-defender/organ-defender-logo.jpg" style="width:100%; height:100%" alt="Organ Defender Logo">
+        </div>
+        <div class="mySlides fade">
+          <img src="assets/organ-defender/organ-defender1.jpg" style="width:100%; height:100%" alt="Organ Defender Screenshot">
+        </div>
+        <div class="mySlides fade">
+          <img src="assets/organ-defender/organ-defender2.jpg" style="width:100%; height:100%" alt="Organ Defender Screenshot">
+        </div>
+        <a class="prev" onclick="plusSlides(-1)">❮</a>
+        <a class="next" onclick="plusSlides(1)">❯</a>
+      </div>
+      <br>
+
+      <div style="text-align:center">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+      </div>
+
+      <script>
+        let slideIndex = 1;
+        showSlides(slideIndex);
+
+        function plusSlides(n) {
+          showSlides(slideIndex += n);
+        }
+
+        function currentSlide(n) {
+          showSlides(slideIndex = n);
+        }
+
+        function showSlides(n) {
+          let i;
+          let slides = document.getElementsByClassName("mySlides");
+          let dots = document.getElementsByClassName("dot");
+          if (n > slides.length) {slideIndex = 1}
+          if (n < 1) {slideIndex = slides.length}
+          for (i = 0; i < slides.length; i++) {
+            slides[i].style.display = "none";
+          }
+          for (i = 0; i < dots.length; i++) {
+            dots[i].className = dots[i].className.replace(" active", "");
+          }
+          slides[slideIndex-1].style.display = "block";
+          dots[slideIndex-1].className += " active";
+        }
+      </script>
+
+      <div class="project-details__content-main">
+        <div class="project-details__desc">
+          <h3 class="project-details__content-title">Project Overview</h3>
+          <p class="project-details__desc-para">
+            I solo developed Organ Defender over a weekend for submission in
+            the Mini Jame Gam 20. I programmed the entire game and made the levels
+            out of a free CC0 asset collection. The game jams theme was 'Out of Time'
+            and also had to incorporate a special object which was 'An Organ (the instrument)'.
+            Overall the game placed #16 and in the special object implementation criteria placed
+            #9.
           </p>
+          <p class="project-details__desc-para">
+            This project was made in Unity and programmed in C#. I opted to use these
+            as I wanted to strengthen my Unity/C# skills. Being in such a short time frame it
+            allowed me to refine my skills in rapid prototyping.
+          </p>
+          <ul style="list-style-type:disc; font-weight: bold" class="project-details__desc-para">
+            <li style="font-weight: normal">During this project, I undertook the following roles:</li>
+            <li>Lead Programmer</li>
+            <li>Concept/Pitch Designer</li>
+            <li>Level Designer</li>
+          </ul>
         </div>
-        <div class="project-cs-hero__cta">
-          <a href="#" class="btn btn--bg" target="_blank">Live Link</a>
+        <div class="project-details__tools-used">
+          <h3 class="project-details__content-title">Tools/Skills Used</h3>
+          <div class="skills">
+            <div class="skills__skill">C#</div>
+            <div class="skills__skill">Unity</div>
+            <div class="skills__skill">Git</div>
+            <div class="skills__skill">Gitea</div>
+            <div class="skills__skill">Desktop</div>
+            <div class="skills__skill">WebGL</div>
+            <div class="skills__skill">Publishing</div>
+          </div>
+        </div>
+        <div>
+          <table style="width: 100%;">
+            <tr>
+              <td style="width: 50%">
+                <a href="starfighter.html"
+                   class="btn btn--med btn--theme dynamicBgClr"
+                   target="_self"
+                   style="float:left"
+                >Previous Project</a>
+              </td>
+              <td style="width: 50%">
+                <a href="sams-town.html"
+                   class="btn btn--med btn--theme dynamicBgClr"
+                   target="_self"
+                   style="float:right"
+                >Next Project</a>
+              </td>
+            </tr>
+          </table>
         </div>
       </div>
-    </section>
-    <section class="project-details">
-      <div class="main-container">
-        <div class="project-details__content">
-          <div class="project-details__showcase-img-cont">
+    </div>
+  </div>
+</section>
+<footer class="main-footer">
+  <div class="main-container">
+    <div class="main-footer__upper">
+      <div class="main-footer__row main-footer__row-1">
+        <h2 class="heading heading-sm main-footer__heading-sm">
+          <span>Social</span>
+        </h2>
+        <div class="main-footer__social-cont">
+          <a target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/jack-waldron-66175b20a/">
             <img
-              src="assets/jpeg/project-mockup-example.jpeg"
-              alt="Project Image"
-              class="project-details__showcase-img"
+                    class="main-footer__icon"
+                    src="./assets/png/linkedin-ico.png"
+                    alt="icon"
             />
-          </div>
-          <div class="project-details__content-main">
-            <div class="project-details__desc">
-              <h3 class="project-details__content-title">Project Overview</h3>
-              <p class="project-details__desc-para">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
-                alias tenetur minus quaerat aliquid, aut provident blanditiis,
-                deleniti aspernatur ipsam eaque veniam voluptatem corporis vitae
-                mollitia laborum corrupti ullam rem. Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Neque alias tenetur minus quaerat
-                aliquid, aut provident blanditiis, deleniti aspernatur ipsam
-                eaque veniam voluptatem corporis vitae mollitia laborum corrupti
-                ullam rem?
-              </p>
-              <p class="project-details__desc-para">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
-                alias tenetur minus quaerat aliquid, aut provident blanditiis,
-                deleniti aspernatur ipsam eaque veniam voluptatem corporis vitae
-                mollitia laborum corrupti ullam rem?
-              </p>
-            </div>
-            <div class="project-details__tools-used">
-              <h3 class="project-details__content-title">Tools Used</h3>
-              <div class="skills">
-                <div class="skills__skill">HTML</div>
-                <div class="skills__skill">CSS</div>
-                <div class="skills__skill">JavaScript</div>
-                <div class="skills__skill">React</div>
-                <div class="skills__skill">SASS</div>
-                <div class="skills__skill">GIT</div>
-                <div class="skills__skill">Shopify</div>
-                <div class="skills__skill">Wordpress</div>
-                <div class="skills__skill">Google ADS</div>
-                <div class="skills__skill">Facebook Ads</div>
-                <div class="skills__skill">Android</div>
-                <div class="skills__skill">IOS</div>
-              </div>
-            </div>
-            <div class="project-details__links">
-              <h3 class="project-details__content-title">See Live</h3>
-              <a
-                href="#"
-                class="btn btn--med btn--theme project-details__links-btn"
-                target="_blank"
-                >Live Link</a
-              >
-              <a
-                href="#"
-                class="btn btn--med btn--theme-inv project-details__links-btn"
-                target="_blank"
-                >Code Link</a
-              >
-            </div>
-          </div>
+          </a>
+          <a target="_blank" rel="noreferrer" href="https://github.com/Foodle1">
+            <img
+                    class="main-footer__icon"
+                    src="./assets/png/github-ico.png"
+                    alt="icon"
+            />
+          </a>
         </div>
       </div>
-    </section>
-    <footer class="main-footer">
-      <div class="main-container">
-        <div class="main-footer__upper">
-          <div class="main-footer__row main-footer__row-1">
-            <h2 class="heading heading-sm main-footer__heading-sm">
-              <span>Social</span>
-            </h2>
-            <div class="main-footer__social-cont">
-              <a target="_blank" rel="noreferrer" href="#">
-                <img
-                  class="main-footer__icon"
-                  src="assets/png/linkedin-ico.png"
-                  alt="icon"
-                />
-              </a>
-              <a target="_blank" rel="noreferrer" href="#">
-                <img
-                  class="main-footer__icon"
-                  src="assets/png/github-ico.png"
-                  alt="icon"
-                />
-              </a>
-              <a target="_blank" rel="noreferrer" href="#">
-                <img
-                  class="main-footer__icon"
-                  src="assets/png/twitter-ico.png"
-                  alt="icon"
-                />
-              </a>
-              <a target="_blank" rel="noreferrer" href="#">
-                <img
-                  class="main-footer__icon"
-                  src="assets/png/yt-ico.png"
-                  alt="icon"
-                />
-              </a>
-              <a target="_blank" rel="noreferrer" href="#">
-                <img
-                  class="main-footer__icon main-footer__icon--mr-none"
-                  src="assets/png/insta-ico.png"
-                  alt="icon"
-                />
-              </a>
-            </div>
-          </div>
-          <div class="main-footer__row main-footer__row-2">
-            <h4 class="heading heading-sm text-lt">John Doe</h4>
-            <p class="main-footer__short-desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit facilis
-              tempora explicabo quae quod deserunt
-            </p>
-          </div>
-        </div>
-
-        <div class="main-footer__lower">
-          &copy; Copyright 2021. Made by
-          <a rel="noreferrer" target="_blank" href="https://rammaheshwari.com"
-            >Ram Maheshwari</a
-          >
-        </div>
+      <div class="main-footer__row main-footer__row-2">
+        <h4 class="heading heading-sm text-lt">Jack Waldron</h4>
       </div>
-    </footer>
-    <script src="index.js"></script>
-  </body>
+    </div>
+    <div class="main-footer__lower">
+      Adapted from template made by
+      <a rel="noreferrer" target="_blank" href="https://rammaheshwari.com"
+      >Ram Maheshwari</a
+      >
+    </div>
+  </div>
+</footer>
+<script src="index.js"></script>
+</body>
 </html>
