Update organ defender logo

--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
             <h3 class="about__content-title">My Skills</h3>
             <div class="skills">
               <div class="skills__skill">C#</div>
+              <!--<div class="skills__skill"><img src="assets/icons/c%23-icon.png" alt="C#" width="25"></div>-->
               <div class="skills__skill">Python</div>
               <div class="skills__skill">HTML/CSS</div>
               <div class="skills__skill">Unity</div>
