--- a/organ-defender.html
+++ b/organ-defender.html
@@ -111,6 +111,9 @@
           <img src="assets/organ-defender/organ-defender-logo.jpg" style="width:100%; height:100%" alt="Organ Defender Logo">
         </div>
         <div class="mySlides fade">
+          <img src="assets/organ-defender/organ-defender-gif.gif" style="width:100%; height:100%" alt="Organ Defender Gameplay">
+        </div>
+        <div class="mySlides fade">
           <img src="assets/organ-defender/organ-defender1.jpg" style="width:100%; height:100%" alt="Organ Defender Screenshot">
         </div>
         <div class="mySlides fade">
@@ -125,36 +128,8 @@
         <span class="dot" onclick="currentSlide(1)"></span>
         <span class="dot" onclick="currentSlide(2)"></span>
         <span class="dot" onclick="currentSlide(3)"></span>
+        <span class="dot" onclick="currentSlide(4)"></span>
       </div>
-
-      <script>
-        let slideIndex = 1;
-        showSlides(slideIndex);
-
-        function plusSlides(n) {
-          showSlides(slideIndex += n);
-        }
-
-        function currentSlide(n) {
-          showSlides(slideIndex = n);
-        }
-
-        function showSlides(n) {
-          let i;
-          let slides = document.getElementsByClassName("mySlides");
-          let dots = document.getElementsByClassName("dot");
-          if (n > slides.length) {slideIndex = 1}
-          if (n < 1) {slideIndex = slides.length}
-          for (i = 0; i < slides.length; i++) {
-            slides[i].style.display = "none";
-          }
-          for (i = 0; i < dots.length; i++) {
-            dots[i].className = dots[i].className.replace(" active", "");
-          }
-          slides[slideIndex-1].style.display = "block";
-          dots[slideIndex-1].className += " active";
-        }
-      </script>
 
       <div class="project-details__content-main">
         <div class="project-details__desc">
