Start sams town

--- a/organ-defender.html
+++ b/organ-defender.html
@@ -148,7 +148,7 @@
             allowed me to refine my skills in rapid prototyping.
           </p>
           <ul style="list-style-type:disc; font-weight: bold" class="project-details__desc-para">
-            <li style="font-weight: normal">During this project, I undertook the following roles:</li>
+            <li style="font-weight: normal">During this project, I undertook the following roles/tasks:</li>
             <li>Lead Programmer</li>
             <li>Concept/Pitch Designer</li>
             <li>Level Designer</li>
