--- a/starfighter.html
+++ b/starfighter.html
@@ -154,7 +154,7 @@
                 experience developing for multiple platforms, Desktop (PCVR) and Android (Quest Standalone).
               </p>
               <ul style="list-style-type:disc; font-weight: bold" class="project-details__desc-para">
-                <li style="font-weight: normal">During this project, I undertook the following roles:</li>
+                <li style="font-weight: normal">During this project, I undertook the following roles/tasks:</li>
                 <li>Lead Programmer</li>
                 <li>Concept/Pitch Designer</li>
                 <li>Playtesting</li>
