--- a/sams-town.html
+++ b/sams-town.html
@@ -93,11 +93,6 @@
         This is a serious game that was made as an industry project in collaboration with Awesome Women in Construction
       </p>
     </div>
-    <!--<div class="project-cs-hero__cta">
-      <iframe frameborder="0" src="https://itch.io/embed/2206570?bg_color=080808&amp;fg_color=dbdbdb&amp;border_color=2a2a2a"
-              width="552" height="167"><a href="https://foodle.itch.io/organ-defender">Organ Defender by Jack Waldron</a>
-      </iframe>
-    </div>-->
     <div class="project-cs-hero__cta">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/kyPFBtktI5o" title="YouTube video player"
               frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -112,6 +107,24 @@
         <div class="mySlides fade">
           <img src="assets/sams-town/sams-town-logo.png" style="width:100%; height:100%" alt="Sam's Town Logo">
         </div>
+        <div class="mySlides fade">
+          <img src="assets/sams-town/sams-town1.png" style="width:100%; height:100%" alt="Sam's Town Screenshot">
+        </div>
+        <div class="mySlides fade">
+          <img src="assets/sams-town/sams-town2.png" style="width:100%; height:100%" alt="Sam's Town Screenshot">
+        </div>
+        <div class="mySlides fade">
+          <img src="assets/sams-town/sams-town3.png" style="width:100%; height:100%" alt="Sam's Town Screenshot">
+        </div>
+        <div class="mySlides fade">
+          <img src="assets/sams-town/sams-town4.png" style="width:100%; height:100%" alt="Sam's Town Screenshot">
+        </div>
+        <div class="mySlides fade">
+          <img src="assets/sams-town/sams-town5.png" style="width:100%; height:100%" alt="Sam's Town Screenshot">
+        </div>
+        <div class="mySlides fade">
+          <img src="assets/sams-town/sams-town6.png" style="width:100%; height:100%" alt="Sam's Town Screenshot">
+        </div>
         <a class="prev" onclick="plusSlides(-1)">❮</a>
         <a class="next" onclick="plusSlides(1)">❯</a>
       </div>
@@ -119,31 +132,31 @@
 
       <div style="text-align:center">
         <span class="dot" onclick="currentSlide(1)"></span>
-        <!--<span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
         <span class="dot" onclick="currentSlide(3)"></span>
-        <span class="dot" onclick="currentSlide(4)"></span>-->
+        <span class="dot" onclick="currentSlide(4)"></span>
+        <span class="dot" onclick="currentSlide(5)"></span>
+        <span class="dot" onclick="currentSlide(6)"></span>
+        <span class="dot" onclick="currentSlide(7)"></span>
       </div>
 
       <div class="project-details__content-main">
         <div class="project-details__desc">
           <h3 class="project-details__content-title">Project Overview</h3>
           <p class="project-details__desc-para">
-            <!--I solo developed Organ Defender over a weekend for submission in
-            the Mini Jame Gam 20. I programmed the entire game and made the levels
-            out of a free CC0 asset collection. The game jams theme was 'Out of Time'
-            and also had to incorporate a special object which was 'An Organ (the instrument)'.
-            Overall the game placed #16 and in the special object implementation criteria placed
-            #9.-->
+            This project was made as a team of 4 as a serious game for Awesome Women in Construction.
+            The purpose of this was to inspire more women to join the construction industry. We did this
+            by showcasing women in all parts of the construction industry through mini-games.
           </p>
           <p class="project-details__desc-para">
-            This project was made in Unity and programmed in C#. <!--I opted to use these
-            as I wanted to strengthen my Unity/C# skills. Being in such a short time frame it
-            allowed me to refine my skills in rapid prototyping.-->
+            This project was made in Unity and programmed in C#. Creating multiple mini-games allowed me
+            to work on many different things within the same project. It allowed me to further my knowledge of
+            object-oriented programming within games by creating bases for systems that would be inherited in
+            different ways in each mini-game.
           </p>
           <ul style="list-style-type:disc; font-weight: bold" class="project-details__desc-para">
             <li style="font-weight: normal">During this project, I undertook the following roles/tasks:</li>
             <li>Lead Programmer</li>
-            <li>Balancing</li>
             <li>Playtesting</li>
           </ul>
         </div>
