Add resume to hamburger

--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
             <li class="header__sm-menu-link">
               <a href="./index.html"> Home </a>
             </li>
-
             <li class="header__sm-menu-link">
               <a href="./index.html#about"> About </a>
             </li>
-
             <li class="header__sm-menu-link">
               <a href="./index.html#projects"> Projects </a>
             </li>
-
+            <li class="header__sm-menu-link">
+              <a href="./assets/resume.pdf" download> Resume </a>
+            </li>
             <li class="header__sm-menu-link">
               <a href="./index.html#contact"> Contact </a>
             </li>
