--- a/sams-town.html
+++ b/sams-town.html
@@ -15,76 +15,20 @@
           href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700;900&display=swap"
           rel="stylesheet"
   />
+  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+  <script>
+    $(function(){
+      $("#footer").load("footer.html");
+    });
+  </script>
+  <script>
+    $(function(){
+      $("#header").load("header.html");
+    });
+  </script>
 </head>
 <body>
-<header class="header">
-  <div class="header__content">
-    <div class="header__logo-container">
-      <span class="header__logo-sub">Jack Waldron</span>
-    </div>
-    <div class="header__main">
-      <ul class="header__links">
-        <li class="header__link-wrapper">
-          <a href="./index.html" class="header__link"> Home </a>
-        </li>
-        <li class="header__link-wrapper">
-          <a href="./index.html#about" class="header__link">About </a>
-        </li>
-        <li class="header__link-wrapper">
-          <div class="dropdown">
-            <a href="./index.html#projects" class="header__link">
-              Projects
-            </a>
-            <div class="dropdown-content header__links" style="width: auto">
-              <a href="starfighter.html" class="header__link">Starfighter</a>
-              <a href="organ-defender.html" class="header__link">Organ Defender</a>
-              <a href="sams-town.html" class="header__link">Sam's Town</a>
-              <a href="mars-base.html" class="header__link">Mars Base</a>
-              <a href="ai-pathfinding.html" class="header__link">AI Pathfinding</a>
-              <a href="mad-dash-dispatch.html" class="header__link">Mad Dash Dispatch</a>
-            </div>
-          </div>
-        </li>
-        <li class="header__link-wrapper">
-          <a href="./assets/resume.pdf" download class="header__link"> Resume </a>
-        </li>
-        <li class="header__link-wrapper">
-          <a href="./index.html#contact" class="header__link"> Contact </a>
-        </li>
-      </ul>
-      <div class="header__main-ham-menu-cont">
-        <img
-                src="./assets/svg/ham-menu.svg"
-                alt="hamburger menu"
-                class="header__main-ham-menu"
-        />
-        <img
-                src="./assets/svg/ham-menu-close.svg"
-                alt="hamburger menu close"
-                class="header__main-ham-menu-close d-none"
-        />
-      </div>
-    </div>
-    <div class="header__sm-menu">
-      <div class="header__sm-menu-content">
-        <ul class="header__sm-menu-links">
-          <li class="header__sm-menu-link">
-            <a href="index.html"> Home </a>
-          </li>
-          <li class="header__sm-menu-link">
-            <a href="index.html#about"> About </a>
-          </li>
-          <li class="header__sm-menu-link">
-            <a href="index.html#projects"> Projects </a>
-          </li>
-          <li class="header__sm-menu-link">
-            <a href="index.html#contact"> Contact </a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</header>
+<div id="header"> </div>
 <section class="project-cs-hero">
   <div class="project-cs-hero__content">
     <h1 class="heading-primary">Sam's Town</h1>
@@ -196,42 +140,7 @@
     </div>
   </div>
 </section>
-<footer class="main-footer">
-  <div class="main-container">
-    <div class="main-footer__upper">
-      <div class="main-footer__row main-footer__row-1">
-        <h2 class="heading heading-sm main-footer__heading-sm">
-          <span>Social</span>
-        </h2>
-        <div class="main-footer__social-cont">
-          <a target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/jack-waldron-66175b20a/">
-            <img
-                    class="main-footer__icon"
-                    src="./assets/png/linkedin-ico.png"
-                    alt="icon"
-            />
-          </a>
-          <a target="_blank" rel="noreferrer" href="https://github.com/Foodle1">
-            <img
-                    class="main-footer__icon"
-                    src="./assets/png/github-ico.png"
-                    alt="icon"
-            />
-          </a>
-        </div>
-      </div>
-      <div class="main-footer__row main-footer__row-2">
-        <h4 class="heading heading-sm text-lt">Jack Waldron</h4>
-      </div>
-    </div>
-    <div class="main-footer__lower">
-      Adapted from template made by
-      <a rel="noreferrer" target="_blank" href="https://rammaheshwari.com"
-      >Ram Maheshwari</a
-      >
-    </div>
-  </div>
-</footer>
+<div id="footer"> </div>
 <script src="index.js"></script>
 </body>
 </html>
